TP-2038 fix service group wrapping issue

--- a/public/themes/custom/palvelumanuaali/components/00-base/00-defaults/_03-mixins.scss
+++ b/public/themes/custom/palvelumanuaali/components/00-base/00-defaults/_03-mixins.scss
@@ -11,7 +11,10 @@
   font-family: $font-body;
   font-size: 1rem;
   line-height: 28px;
-  font-weight: 500;
+  font-weight: 400;
+  @include xl-zoom {
+    font-weight: 500;
+  }
 }
 
 @mixin basic-text {
