--- a/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
+++ b/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
@@ -261,16 +261,6 @@ article ul,
   }
 }
 
-//min-height
-.m-hght {
-  &--service-grp {
-    min-height: 200px;
-    @include xl {
-      min-height: 300px;
-    }
-  }
-}
-
 //Border-color
 .border-color {
   &--light-blue {
