--- a/public/themes/custom/palvelumanuaali/components/01-atoms/text/text/_text.scss
+++ b/public/themes/custom/palvelumanuaali/components/01-atoms/text/text/_text.scss
@@ -142,18 +142,18 @@
   }
 }
 .text-normal {
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 400;
   span {
-    font-size: 14px;
-    line-height: 22px;
-  }
-  @include xl-zoom {
     font-size: 16px;
     line-height: 28px;
+    font-weight: 400;
+  }
+  @include xl-zoom {
+    font-weight: 500;
     span {
-      font-size: 16px;
-      line-height: 28px;
+      font-weight: 500;
     }
   }
 }
